...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="220dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/owner" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/saveCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="530dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/mybutton"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.09" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/brand" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/model" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enrollment" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
...
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout4"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/carregistrationicon" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="49dp"
                android:layout_height="42dp"
                android:layout_marginStart="7dp"
                android:layout_marginBottom="150dp"
                android:contentDescription="@string/receptionDateIconDescription"
                app:layout_constraintBottom_toBottomOf="parent"
...
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/modelicon" />

            <ToggleButton
                android:id="@+id/estadoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:text="@string/togglebutton"
                android:textOff="@string/normal"
...
                android:text="@string/status"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/textInputLayout4"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="4dp"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="@+id/imageView8"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fault" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
...
